--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="io.github.changjiashuai.pulltorefreshlayout">
+          package="io.github.changjiashuai.pulltorefresh">
 
     <application
             android:allowBackup="true"
@@ -8,7 +8,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="io.github.changjiashuai.pulltorefreshlayout.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
