--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile project(':pulltorefresh')
+    compile 'io.github.changjiashuai:pulltorefresh:1.0.0'
+//    compile project(':pulltorefresh')
 }
