--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         maven {
             url "http://dl.bintray.com/changjiashuai/maven"
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
