--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
 //    compile 'io.github.changjiashuai:pulltorefresh:1.0.0'
-//    compile 'com.github.changjiashuai:PullToRefreshLayout:v1.0.0'
+    compile 'com.github.changjiashuai:PullToRefreshLayout:v1.0.0'
     compile 'com.wang.avi:library:2.1.3'
-    compile project(':pulltorefresh')
+//    compile project(':pulltorefresh')
 }
